WIP: Add postgres DB

--- a/crawler/config.json
+++ b/crawler/config.json
@@ -1,3 +1,5 @@
 {
-  "TEMP_DIR" : "/tmp/elm-function-search-repos"
+  "TEMP_DIR" : "/tmp/elm-function-search-repos",
+  "GITHUB_CLIENT_ID": "a0520decaded2eadf661",
+  "GITHUB_CLIENT_SECRET": "ae452d7f8d9460dbca427c9750008000955d38ae"
 }
