--- a/crawler/package.json
+++ b/crawler/package.json
@@ -1,20 +1,24 @@
 {
-  "name": "worker",
+  "name": "crawler",
   "version": "1.0.0",
   "description": "",
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "createdb": "psql -c \"SELECT 1\" elm_function_search_development 2>/dev/null 1>/dev/null || createdb elm_function_search_development",
-    "migrate": "knex migrate:latest"
+    "migrate": "knex-migrate redo --verbose"
   },
   "author": "Paul Sonnentag <Paul.Sonnentag@googlemail.com>",
   "license": "MIT",
   "dependencies": {
+    "aws-sdk": "^2.293.0",
     "compare-versions": "^3.3.0",
     "fs-extra": "^7.0.0",
     "glob": "^7.1.2",
     "knex": "^0.15.2",
+    "knex-migrate": "^1.6.1",
+    "lambda-git": "^0.1.2",
+    "lawos": "^1.1.5",
     "lodash": "^4.17.10",
     "luxon": "^1.3.3",
     "node-fetch": "^2.2.0",
