--- a/crawler/serverless.yml
+++ b/crawler/serverless.yml
@@ -7,7 +7,11 @@ provider:
   runtime: nodejs8.10
   memorySize: 512
   region: us-west-1
-
+  iamRoleStatements:
+    - Effect: Allow
+      Action:
+        - sqs:SendMessage
+      Resource: arn:aws:sqs:*:*:*
   environment:
     DATABASE_HOST:
       Fn::GetAtt:
@@ -18,6 +22,12 @@ provider:
     DATABASE_NAME: "elmFunctionSearch"
     TEMP_REPO_DIR: "/tmp/repos"
     NODE_ENV: "lambda"
+    ACCOUNT_ID:
+        Ref: 'AWS::AccountId'
+    REPO_QUEUE_NAME:
+      Fn::GetAtt:
+        - RepoQueue
+        - QueueName
 
 functions:
   fetchRepos:
@@ -66,11 +76,3 @@ resources:
     Type: "AWS::SQS::Queue"
     Properties:
       QueueName: "RepoQueue"
-
- Outputs:
-    pgEndpoint:
-      Description: "JDBC connection string for database"
-      Value:
-        Fn::GetAtt:
-          - pgDB
-          - Endpoint.Address
